# shuup-stripe

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  package.json  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_settings.py
.tx/: config
shuup_stripe/: .gitignore  __init__.py  admin_forms.py  apps.py  bower.json  checkout_forms.py  checkout_phase.py  dashboard_items.py  generated_resources.txt  gulpfile.js  models.py  module.py  notify_events.py  order_section.py  package.json  redirector.py  settings.py  url_provider.py  urls.py  utils.py  views.py
shuup_stripe/admin_module/: __init__.py  form_parts.py  forms.py
shuup_stripe/admin_module/views/: __init__.py  connect.py  finalize.py
shuup_stripe/locale/en/LC_MESSAGES/: django.po
shuup_stripe/locale/fi_FI/LC_MESSAGES/: django.po
shuup_stripe/locale/sv_SE/LC_MESSAGES/: django.po
shuup_stripe/locale/zh_Hans/LC_MESSAGES/: django.po
shuup_stripe/migrations/: 0002_update_managers.py  0003_saved_customer.py  0004_longer_key_fields.py
shuup_stripe/static_src/admin/js/: shuup_stripe.js
shuup_stripe/templatetags/: __init__.py
shuup_stripe/utils/: __init__.py  connect.py  general.py
shuup_stripe/views/: __init__.py  oauth.py
shuup_stripe_tests/: data.py  mocks.py  settings.py  test_admin.py  test_connect.py  test_custom_messages.py  test_saved_card.py  test_settings.py  test_shop_form_part.py  test_stripe.py  test_stripe_saved_card.py  test_wizard.py  utils.py
tests/: data.py  mocks.py  test_connect.py  test_stripe.py  utils.py
(+8 files in other folders)
