[metadata]
name = shuup-stripe
version = 1.0.1.post+gitver
description = Stripe Checkout integration for Shuup
long_description = file: README.rst
keywords = stripe, shuup

[options]
include_package_data = True
packages = find:
install_requires =
    stripe>2,<3
    django-environ>=0.4.3,<1

[options.extras_require]
shuup = shuup>=0.5,<2

[options.entry_points]
shuup.addon = shuup_stripe = shuup_stripe

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,dist,venv,migrations,docs,build,doc
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_stripe_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
multi_line_output=5
not_skip=__init__.py
length_sort=false
line_length=79
order_by_type=false
wrap_length=79
diff=True
skip=.tox,dist,venv,migrations,docs,build
known_first_party=shuup_stripe
known_standard_library=token,tokenize,enum,importlib
known_third_party=
    django
    enumfields
    jsonfield
    mock
    pytest
    shuup
    six
    stripe
